--- a/e11/index.html
+++ b/e11/index.html
@@ -7,37 +7,34 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <div class="container">
-      <div class="ear">
-        <div class="inner"></div>
-      </div>
-      <div class="ear_right">
-        <div class="inner_right">
+    <div class="bear">
+      <div class="body">
+          <div class="hand_left">
+          <div class="thumb"></div>
+          <div class="hand"></div>
+          <div class="leg"></div>
+          <div class="leg"></div>
       </div>
       <div class="head">
           <div class="eye"></div>
           <div class="eye_right"></div>
-      </div>
-          <div class="mouth_container">
+          <div class="ear">
+            <div class="inner"></div>
+          </div>
+          <div class="ear_right">
+            <div class="inner_right">
+          </div>
+          <div class="mouth"></div>
             <div class="nose"></div>
-            <div class="mouth">
               <div class="line1"></div>
               <div class="line2"></div>
               <div class="line3"></div>
           </div>
       </div>
     </div>
-      <div class="body_parts">
-          <div class="hand_left">
-          <div class="thumb">
-          <div class="hand">>
-          <div class="leg">
-          <div class="leg">
-      </div>
       <div class="fish">
-        <div class="tail">
+        <div class="tail"></div>
       </div>
-      <div class="boat"></div>
     </div>
   </body>
 </html>
