--- a/e11/index.html
+++ b/e11/index.html
@@ -9,11 +9,12 @@
   <body>
     <div class="bear">
       <div class="body">
-          <div class="hand_left">
-          <div class="thumb"></div>
+          <div class="hand_left"></div>
           <div class="hand"></div>
+          <div class="leg_left"></div>
+          <div class="foot_left"></div>
           <div class="leg"></div>
-          <div class="leg"></div>
+          <div class="foot"></div>
       </div>
       <div class="head">
           <div class="eye"></div>
@@ -22,7 +23,7 @@
             <div class="inner"></div>
           </div>
           <div class="ear_right">
-            <div class="inner_right">
+            <div class="inner_right"></div>
           </div>
           <div class="mouth"></div>
             <div class="nose"></div>
