--- a/e11/index.html
+++ b/e11/index.html
@@ -36,6 +36,8 @@
       <div class="fish">
         <div class="tail"></div>
       </div>
+     </div>
+     <div class="boat"></div>
     </div>
   </body>
 </html>
