--- a/e11/index.html
+++ b/e11/index.html
@@ -37,7 +37,9 @@
         <div class="tail"></div>
       </div>
      </div>
-     <div class="boat"></div>
+     <div class="boat">
+       <div class="tip"></div>
+     </div>   
     </div>
   </body>
 </html>
