--- a/p2/index.html
+++ b/p2/index.html
@@ -15,15 +15,21 @@
       <div class="white"></div>
       <div class="red"></div>
     </div>
-    <h1><a href="index.html">Pines of Nowhere</a></h1>
+    <div class="title">
+      <h1><a href="index.html">Pines of Nowhere</a></h1>
+    </div>
     <nav>
-        <a href="menu/index.html">Menu</a>
-        <a href="events/index.html">Events</a>
-        <a href="about/index.html">About</a>
+      <ul>
+        <li><a href="menu/index.html">Menu</a></li>
+        <li><a href="events/index.html">Events</a></li>
+        <li><a href="about/index.html">About</a></li>
+      </ul>
     </nav>
    </header>
    <main>
-    <img src="images/pasta1.2.jpg" alt="carbonara with white background">
+     <div class="hero">
+       <img src="images/pasta1.2.jpg" alt="carbonara with white background">
+     </div>
     <h2>Benvenuti a tutti!</h2>
     <p>Welcome to Pines of Nowhere! We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
     <img src="images/meal3.2.jpg" alt="coffee and pastries">
