--- a/p2/index.html
+++ b/p2/index.html
@@ -10,11 +10,6 @@
  </head>
  <body>
    <header>
-    <div class="border">
-      <div class="green"></div>
-      <div class="white"></div>
-      <div class="red"></div>
-    </div>
     <div class="title">
       <h1><a href="index.html">Pines of Nowhere</a></h1>
     </div>
@@ -28,10 +23,12 @@
    </header>
    <main>
      <div class="hero">
-       <img src="images/pasta1.2.jpg" alt="carbonara with white background">
+       <h1>Benvenuti a tutti!</h1>
      </div>
-    <h2>Benvenuti a tutti!</h2>
     <p>Welcome to Pines of Nowhere! We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
+      <div class="col">
+        <img src="images/pasta1.2.jpg" alt="carbonara with white background">
+      </div>  
     <img src="images/meal3.2.jpg" alt="coffee and pastries">
     <h2>Explore our Menu</h2>
     <p>At Pines of Nowhere, we offer quality Italian meals and treats that will remind you of Nonna’s homecooked meals!</p>
