--- a/p2/index.html
+++ b/p2/index.html
@@ -25,22 +25,51 @@
      <div class="hero">
        <h1>Benvenuti a tutti!</h1>
      </div>
-    <p>Welcome to Pines of Nowhere! We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
+    <div class="row">
+      <div class="col col-margin">
+      </div>
       <div class="col">
-        <img src="images/pasta1.2.jpg" alt="carbonara with white background">
-      </div>  
-    <img src="images/meal3.2.jpg" alt="coffee and pastries">
-    <h2>Explore our Menu</h2>
-    <p>At Pines of Nowhere, we offer quality Italian meals and treats that will remind you of Nonna’s homecooked meals!</p>
-    <p><a href="menu/index.html">Menu</a></p>
-    <img src="images/people1.2.jpg" alt="man and woman cooking together">
-    <h2>Schedule your Seat for our Cooking Classes</h2>
-    <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
-    <p><a href="events/index.html">Events</a></p>
-    <img src="images/pizza1.2.jpg" alt="man cutting pizza">
-    <h2>Who We Are</h2>
-    <p>Over a year since our founding, we work hard to offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
-    <p><a href="about/index.html">About Us</a></p>
+        <h2>Welcome to Pines of Nowhere</h2>
+        <p>We are an American Italian restaurant/bakery that bakes authentic Italian breads and pastries in the D.C. area. Aside from our homemade baked goods our menu also offers breakfast, lunch, dinner. Come eat with us!</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col col-margin">
+        <img src="images/meal3.2.jpg" alt="coffee and pastries">
+      </div>
+      <div class="col">
+        <h2>Enjoy the food you love</h2>
+        <p>At Pines of Nowhere, we offer quality Italian meals and treats that will remind you of Nonna’s homecooked meals!</p>
+      </div>
+    </div>
+    <div class="sectionbreak">
+        <p><a href="menu/index.html">Menu</a></p>
+      </div>
+      <div class="row">
+        <div class="col col-margin">
+          <img src="images/people1.2.jpg" alt="man and woman cooking together">
+        </div>
+        <div class="col">
+          <h2>Food, Folks and Fun all together</h2>
+          <p>Schedule your seat for our cooking Classes. Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
+        </div>
+      </div>
+      <div class="sectionbreak">
+          <h3>Schedule your seat for our cooking Classes.</h3>
+          <p><a href="events/index.html">Events</a></p>
+      </div>
+      <div class="row">
+        <div class="col col-margin">
+          <img src="images/pizza1.2.jpg" alt="man cutting pizza">
+        </div>
+        <div class="col">
+          <h2>One goal, One passion – Food.</h2>
+          <p>Over a year since our founding, we work hard to offer our customers a little slice of Italy with our commitment to delivering authentic Italian cuisine.</p>
+        </div>
+      </div>
+      <div class="sectionbreak">
+        <p><a href="about/index.html">About Us</a></p>
+      </div>
    </main>
    <footer>
     <p>Copyright @ 2020 Pines of Nowhere</p>
