--- a/p2/events/index.html
+++ b/p2/events/index.html
@@ -10,39 +10,58 @@
  </head>
  <body>
    <header>
-    <div class="border">
-      <div class="green"></div>
-      <div class="white"></div>
-      <div class="red"></div>
-    </div>
     <h1><a href="../index.html">Pines of Nowhere</a></h1>
     <nav>
       <ul>
-        <li><a href="../about/index.html">About</a></li>
-        <li><a href="index.html">Events</a></li>
         <li><a href="../menu/index.html">Menu</a></li>
+        <li><a href="index.html">Events</a></li>
+        <li><a href="../about/index.html">About</a></li>
       </ul>
     </nav>
    </header>
-   <main>
-    <img src="../images/person.jpg" alt="person working in kitchen">
-    <h2>Events</h2>
-    <h4>To schedule an event please send us an email in advance!</h4>
-    <h3>Cooking Class</h3>
-    <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
-    <h3>Arts and Crafts Night</h3>
-    <p>Every Saturday evening, from 6pm-8pm, we explore and auction artworks from local artists. We also make arts and crafts.</p>
-    <h3>Tasting Events</h3>
-    <p>Every Sunday night, from 9pm-10pm, we host wine, cheese, and other tasting events. We’ll show you exotic and expensive cheeses and wines from Italy and other parts of Europe, and other foods you can eat them with.</p>
-    <h3>Catering</h3>
-    <p>We now offer catering! Please email us for more information!</p>
-    <h2>Make Yourself At Home</h2>
-    <img src="../images/people2.jpg" alt="crowded cafe with people">
-    <h5>Location:<h5> <p>1234 5th St NW, Washington D.C.</p>
-    <h5>Hours:</h5> <p>Monday through Thursday 8am to 11pm; Friday and Saturday, 9am to midnight.</p>
-    <h5>Contact Information:</h5>
-       <p>251-324-2888</p>
-       <p>pinesofnowhere@gmail.com</p>
+   <main id="events">
+     <div class="hero">
+      <h1>Events</h1>
+     </div>
+      <!<To schedule an event please send us an email in advance!</h4>
+     <div class="paragraph">
+      <h2>Cooking Class</h2>
+      <p>Every Friday evening, from 5pm-7pm, we offer cooking classes for those who want to learn how to make delicious Italian food. Our staff is happy to share our techniques and secrets to those who are eager to learn!</p>
+    </div>
+    <div class="paragraph">
+      <h2>Arts and Crafts Night</h2>
+      <p>Every Saturday evening, from 6pm-8pm, we explore and auction artworks from local artists. We also make arts and crafts.</p>
+    </div>
+    <div class="paragraph">
+      <h2>Tasting Events</h2>
+      <p>Every Sunday night, from 9pm-10pm, we host wine, cheese, and other tasting events. We’ll show you exotic and expensive cheeses and wines from Italy and other parts of Europe, and other foods you can eat them with.</p>
+    </div>
+    <div class="paragraph">
+      <h2>Catering</h2>
+      <p>We now offer catering! Please email us for more information!</p>
+    </div>
+    <div class="break">
+      <h3>To schedule an event please send us an email in advance!</h3>
+    </div>
+    <div class="hero2">
+      <h1>Make Yourself At Home</h1>
+    </div>
+      <!<img src="../images/people2.jpg" alt="crowded cafe with people">
+    <div class="paragraph">
+      <h2>Location:<h2>
+      <p>1234 5th St NW, Washington D.C.</p>
+    </div>
+    <div class="paragraph">
+      <h2>Hours:</h2>
+      <p>Monday through Thursday 8am to 11pm; Friday and Saturday, 9am to midnight.</p>
+    </div>
+    <div class="contact">
+      <h2>Contact Information:</h2>
+      <ul>
+        <li>251-324-2888</li>
+        <li>pinesofnowhere@gmail.com</li>
+      </ul>
+    </div>
    </main>
    <footer>
     <p>Copyright @ 2020 Pines of Nowhere</p>
