--- a/p2/menu/index.html
+++ b/p2/menu/index.html
@@ -5,169 +5,151 @@
    <title>Menu</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="stylesheet" href="../css/main.css">
-   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+   <!<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <! <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+   <!<link rel="stylesheet" href="https://use.typekit.net/hzl4xcz.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
  </head>
  <body>
    <header>
-    <div class="border">
-      <div class="green"></div>
-      <div class="white"></div>
-      <div class="red"></div>
-    </div>
     <h1><a href="../index.html">Pines of Nowhere</a></h1>
     <nav>
-      <a href="menu/index.html">Menu</a>
-      <a href="events/index.html">Events</a>
-      <a href="about/index.html">About</a>
+      <ul>
+        <li><a href="index.html">Menu</a></li>
+        <li><a href="../events/index.html">Events</a></li>
+        <li><a href="../about/index.html">About</a></li>
+      </ul>
     </nav>
    </header>
-   <main>
-   <img src="../images/bread1.2.jpg" alt="lots of bread">
-   <h2>Breads</h2>
-      <p>Focaccia - $8</p>
-      <p>Rustic Italian Bread - $7</p>
-      <p>Sourdough Bread - $7</p>
-      <p>French Baguette - $4</p>
-      <p>Croissant - $1.50</p>
-      <p>Bagel - $2</p>
-    <img src="../images/sweets3.jpg" alt="window display with green cakes">
-    <h2>Pastries</h2>
-       <p>Sicilian Cannoli - $5</p>
-       <p>Panettone - $6</p>
-       <p>Zeppole - $4</p>
-       <p>Sfogliatella - $4</p>
-       <p>Bombolone - $4</p>
-       <p>Pies Slice - $3 Whole - $15</p>
-       <ul>
-         <li>Apple</li>
-         <li>Cherry</li>
-         <li>Blueberry</li>
-         <li>Pumpkin</li>
-         <li>Pecan</li>
-       </ul>
-     <img src="../images/cakes.jpg" alt="display of cakes">
-     <h2>Cakes</h2>
-      <p>Slice - $3 Whole - $15</p>
-      <p>Tiramisu</p>
-      <p>Zuccotto</p>
-      <p>Cassata</p>
-      <p>Torta Paradiso</p>
-     <img src="../images/cookie.jpg" alt="colorful macaroons">
-      <h2>Cookies</h2>
-      <p>$0.50 Each or $5 for a Dozen</p>
-         <p>Biscotti</p>
-         <ul>
-           <li>Almond</li>
-           <li>Pistachio</li>
-           <li>Hazelnut & Chocolate</li>
-           <li>Orange-cranberry</li>
-           <li>Double Chocolate</li>
-         </ul>
-         <p>Mom’s Homemade Chocolate Chip Cookies</p>
-         <p>Sugar Cookies</p>
-         <p>Macaroons</p>
-          <ul>
-           <li>Vanilla</li>
-           <li>Strawberry</li>
-           <li>Chocolate</li>
-           <li>Pistachio</li>
-           <li>Coffee</li>
-          </ul>
-       <img src="../images/drink1.jpg" alt="coffee, juice, and baked goods">
-       <h2>Drinks</h2>
-          <p>S: $2, M: $2.50, L: $3  Hot or Cold</p>
-          <p>Coffee</p>
-            <ul>
-            <li>Espresso</li>
-            <li>Cappuccino</li>
-            <li>Ristretto</li>
-            <li>Caffe Americano</li>
-            <li>Macchiato</li>
-            <li>Mocha</li>
-            <li>Latte</li>
-           </ul>
-          <p>Juices</p>
-            <ul>
-               <li>Orange</li>
-               <li>Apple</li>
-               <li>Grape</li>
-            </ul>
-          <p>Water</p>
-          <p>Tea</p>
-            <ul>
-              <li>Black</li>
-              <li>Green</li>
-              <li>Raspberry</li>
-              <li>Chamomile</li>
-              <li>Oolong</li>
-              <li>Mint</li>
-              <li>Jasmine</li>
-            </ul>
-        <img src="../images/pizza2.jpg" alt="pizza with lettuce">
-        <h2>Meals</h2>
-         <ul>
-           <p>Hearty Breakfast Eggs, bacon, beans, cheese, blood sausage, toast - $10</p>
-           <p>Brushcetta-$10</p>
-           <p>Lasagna - $10</p>
-           <p>Stuffed shells - $10</p>
-           <p>Pasta Tomato sauce or Pesto sauce - $10</p>
-            <ul>
-              <li>Spagetti</li>
-              <li>Carbonara</li>
-              <li>Ravioli</li>
-              <li>Tortellini</li>
-            </ul>
-           <p>Risotto - $10</p>
-           <p>Salad - $10</p>
-            <ul>
-             <li>Caprese</li>
-             <li>Chicken Caesar</li>
-             <li>Greek Tomato & Cucumber Salad</li>
-            </ul>
-           <p>Italian pizza: $6 Choose cheeses, toppings, sauces from our menu</p>
-         <img src="../images/cheese3.jpg" alt="lots of cheeses in a wall display">
-         <h2>Cheeses, Meats & Other Toppings</h2>
-            <h3>Cheeses Slice - $.50, Whole - $6</h3>
-            <p>Mozzarella</p>
-            <p>Parmesan</p>
-            <p>Ricotta</p>
-            <p>Provolone</p>
-            <p>Havarti</p>
-            <p>Muenster</p>
-            <p>Brie</p>
-            <p>Camembert</p>
-            <p>Gorgonzola</p>
-            <p>Fontina</p>
-            <h3>Meats Slice - $0.50, Whole - $10</h3>
-            <p>Honey Ham</p>
-            <p>Peppered Turkey</p>
-            <p>Rotisserie Chicken</p>
-            <p>Angus Roast Beef</p>
-            <p>Pastrami</p>
-            <p>Italian Sausages (sweet or spicy)</p>
-            <p>Italian Meatballs</p>
-            <p>Prosciutto</p>
-            <h3>Toppings $0.50 Each</h3>
-            <p>Onions</p>
-            <p>Alfalfa Sprouts</p>
-            <p>Spinach</p>
-            <p>Basil</p>
-            <p>Romaine Lettuce</p>
-            <p>Olives</p>
-            <p>Oregano</p>
-            <p>Thyme</p>
-            <p>Rosemary</p>
-            <p>Antipasto
-            <p>Peppers</p>
-            <p>Pickles</p>
-            <h3>Sauces, Dressings, & Condiments</h3>
-            <p>Tomato & Basil Sauce</p>
-            <p>Mayonnaise</p>
-            <p>Mustard</p>
-            <p>Olive Oil</p>
-            <p>Pesto</p>
-            <p>Balsamic vinegar</p>
+   <main id="menu">
+     <div class="hero">
+       <h1>Menu</h1>
+     </div>
+     <div class="hero2">
+        <h1>Bakery</h1>
+      </div>
+      <div class="section">
+        <h2>Breads</h2>
+        <div class="underline"></div>
+        <h3>Focaccia………………………………………………$8</h3>
+        <p>Rustic Italian Bread………………………………………………$7</p>
+        <p>Sourdough Bread………………………………………………$7</p>
+        <p>French Baguette………………………………………………$4</p>
+        <p>Croissant………………………………………………$2</p>
+        <p>Bagel………………………………………………$2</p>
+      </div>
+      <div class="section">
+        <h2>Pastries</h2>
+        <h3>Sicilian Cannoli………………………………………………$5</h3>
+        <h3>Panettone………………………………………………$6</h3>
+        <h3>Zeppole………………………………………………$4</h3>
+        <h3>Sfogliatella………………………………………………$4</h3>
+        <h3>Bombolone………………………………………………$4</h3>
+        <h3>Pies………………………………………………Slice-$3 Whole-$15</h3>
+        <p>Apple, Cherry, Blueberry, Pumpkin, Pecan</p>
+      </div>
+      <div class="section">
+        <h2>Cakes</h2>
+        <p>Tiramisu………………………………………………Slice-$3 Whole-$15</p>
+        <p>Zuccotto………………………………………………Slice-$3 Whole-$15</p>
+        <p>Cassata………………………………………………Slice-$3 Whole-$15</p>
+        <p>Torta Paradiso………………………………………………Slice-$3 Whole-$15</p>
+      </div>
+      <div class="section">
+        <h2>Cookies</h2>
+        <h3>Biscotti………………………………………………$5 for a Dozen</h3>
+        <p>Almond, Pistachio, Hazelnut Chocolate, Orange-Cranberry, Double Chocolate</p>
+        <h3>Chocolate Chip Cookies………………………………………………$5 for a Dozen</h3>
+        <h3>Sugar Cookies………………………………………………$5 for a Dozen</h3>
+        <h3>Macaroons………………………………………………$5 for a Dozen</h3>
+        <p>Vanilla, Strawberry, Chocolate, Pistachio, Coffee</p>
+       </div>
+       <div class="hero3">
+         <h1>Drinks</h1>
+       </div>
+       <div class="section">
+            <h2>Coffee</h2>
+            <p>Hot or Cold</p>
+            <h3>Espresso………………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Cappuccino………………………………………………S:$5, M:$5.50, L:$6</h3>
+            <h3>Ristretto………………………………………………S:$5, M:$5.50, L:$6</h3>
+            <h3>Caffe Americano………………………………………………S:$2, M:$2.50, L:$3</h3>
+            <h3>Macchiato………………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Mocha………………………………………………S:$6, M:$6.50, L:$7</h3>
+            <h3>Latte………………………………………………S:$7, M:$7.50, L:$8</h3>
+      </div>
+      <div class="section">
+            <h2>Juices</h2>
+            <h3>Orange………………………………………………S:$2, M:$2.50, L:$3</h3>
+            <h3>Apple………………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Grape………………………………………………S:$4, M:$4.50, L:$5</h3>
+      </div>
+      <div class="section">
+            <h2>Tea</h2>
+            <p>Hot or Cold</p>
+            <h3>Black Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Green Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Raspberry Tea………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Chamomile Tea………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Oolong Tea………………………………………………S:$2, M:$2.50, L:$3</h3>
+            <h3>Mint Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Jasmine Tea……………………………………………S:$3, M:$3.50, L:$4</h3>
+            <h3>Milk Tea………………………………………………S:$3, M:$3.50, L:$4</h3>
+      </div>
+      <div class="hero4">
+        <h1>Meals</h1>
+      </div>
+      <div class="section">
+         <h2>Entrées</h2>
+         <h3>Hearty Breakfast……………………………$10</h3>
+         <p>Eggs, bacon, beans, cheese, blood sausage, toast</p>
+         <h3>Brushcetta……………………………$10</h3>
+         <h3>Lasagna……………………………$10</h3>
+         <h3>Stuffed shells……………………………$10</h3>
+         <h3>Risotto……………………………$10</h3>
+         <h3>Salad……………………………$10</h3>
+         <p>Caprese, Chicken Caesar, Greek Tomato & Cucumber Salad</p>
+       </div>
+       <div class="section">
+         <h2>Pasta</h2>
+         <h3>Spagetti……………………………$10</h3>
+         <p>Tomato sauce, Pesto sauce, or Alfredo sauce</p>
+         <h3>Carbonara……………………………$10</h3>
+         <h3>Ravioli……………………………$10</h3>
+         <p>Four cheese, Spinach, Beef, Mushroom</p>
+         <h3>Tortellini……………………………$10</h3>
+       </div>
+       <div class="section">
+          <h2>Italian pizza</h2>
+          <h3>Margherita……………………………………………………………$6</h3>
+          <p>Tomato, Basil Leaves, Mozzarella, Tomato Sauce, Salt, Extra-Virgin Olive Oil</p>
+          <h3>Chicago…………………………………………………………………..$6</h3>
+          <p>Tomato, Basil Leaves, Mozzarella, Tomato Sauce, Salt, Extra-Virgin Olive Oil</p>
+          <h3>Pepperoni……………………………………………………………….$6</h3>
+          <h3>Four Cheeses…………………………………………………………$6</h3>
+          <h3>Italian Meatball……………………………………………………..$6</h3>
+          <p>Italian Meatballs, Dollops of Ricotta, Mozzarella, Tomato Sauce, Pepperoni, Italian Sausage, Mushrooms</p>
+          <h3>Combo…………………………………………………………………….$6</h3>
+          <p>Mozzarella, Provolone Cheese, Tomato Sauce, Pepperoni, Italian Sausage, Mushrooms, Black Olives, Red Onions, Green Peppers</p>
+          <h3>Hawaiian…………………………………………………………………$6</h3>
+          <p>Mozzarella, Provolone Cheese, Tomato Sauce, Ham, Pineapple</p>
+       </div>
+       <div class="section">
+         <h2>Sandwiches</h2>
+         <h3>Pesto Panini……………………………………………………$5</h3>
+         <p>Pesto sauce, Mozzarella, Tomato, Baguette, Basil leaves</p>
+         <h3>Ultimate Panini………………………………………………$8</h3>
+         <p>Baguette, Pesto sauce, Muenster cheese, Havarti cheese, Honey ham, Peppered turkey, Basil leaves, Spinanch, Onions, Tomato</p>
+         <h3>Chicken Sandwich…………………………………………$8</h3>
+         <p>Baguette, Rotisserie chicken, Bacon, Tomato, Lettuce, Onion, Mayonnaise, Mustard, Provolone cheese</p>
+         <h3>Pastrami Sandwich……………………………………….$8</h3>
+         <p>Rye bread, Pastrami, Sauerkraut, Pickles, Swiss cheese, Mayonnaise</p>
+         <h3>Meatball Sub…………………………………………………..$8</h3>
+         <p>Baguette, Beef meatballs, Tomato sauce, Shredded parmesan cheese, Provolone cheese</p>
+       </div>
       </main>
       <footer>
         <p>Copyright @ 2020 Pines of Nowhere</p>
