--- a/p2/index.html
+++ b/p2/index.html
@@ -23,7 +23,7 @@
       </ul>
     </nav>
    </header>
-   <main>
+   <main id="home">
      <div class="hero">
        <h1>Benvenuti a tutti!</h1>
      </div>
