--- a/e14/index.html
+++ b/e14/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Exercise 14</title>
   </head>
   <body>
@@ -23,6 +24,10 @@
       <p>Step 11: AND YOUR DONE WITH YOUR ICECREAM!!! YAY! ENJOY!.</p>
       <p>Step 12: Now export this artboard as a .JPEG/.jpg file and email it to me: sferruf@gmu.edu</p>
       <p>Step 13: Breathe.You're done! Congrats! Have a good day! :)</p>
+      <div class="exercise">
+        <img src="images/e14_Sofia.jpg" alt="My original drawing">
+        <img src="images/e14_Stefy.jpg" alt="Stefy's version of my drawing">
+      </div>
     </main>
   </body>
 </html>
