--- a/e14/index.html
+++ b/e14/index.html
@@ -26,7 +26,9 @@
       <p>Step 13: Breathe.You're done! Congrats! Have a good day! :)</p>
       <div class="exercise">
         <img src="images/e14_Sofia.jpg" alt="My original drawing">
+          <p>My original drawing</p>
         <img src="images/e14_Stefy.jpg" alt="Stefy's version of my drawing">
+          <p>Stefy's version of my drawing</p>
       </div>
     </main>
   </body>
